# teco-ops

./: .clang-format  README.md  setup.py
SDAAC_examples/: README.md  run_customops.sh
SDAAC_examples/DMA/: README.md
SDAAC_examples/DMA/memcpy/: memcpy_doubleType.scpp  memcpy_global2global_aligned.scpp  memcpy_global2global_stride.scpp  memcpy_global2spm_aligned.scpp  memcpy_spm2spm_aligned.scpp
SDAAC_examples/DMA/memcpy_async/: memcpy_async.scpp  memcpy_async_global2spm_transpose_stride.scpp
SDAAC_examples/RMA/: README.md
SDAAC_examples/RMA/rma_async/mix_RmaNormalMode_RmaCustomizeMode/: mix_manual_Auto_async_diff_thread_put_put.scpp  mix_manual_Auto_async_diff_thread_put_put2.scpp
SDAAC_examples/RMA/rma_sync/sync_get/: rma_sync_get.scpp  rma_sync_get_get.scpp  rma_sync_multi_thread_get_get.scpp
SDAAC_examples/RMA/rma_sync/sync_put/: makefile  rma_sync_multi_thread_put_put.scpp  rma_sync_put.scpp  rma_sync_put_put.scpp
SDAAC_examples/algorithm_example/: README.md  common.h
SDAAC_examples/algorithm_example/add/: add.scpp  makefile
SDAAC_examples/algorithm_example/convolution/: convolution_half.scpp
SDAAC_examples/algorithm_example/gemm/: gemm.scpp
SDAAC_examples/algorithm_example/summa/: summa_async.scpp  summa_sync.scpp
SDAAC_examples/atomic/: README.md  atomic_add.scpp  atomic_add_noret.scpp  atomic_cas.scpp  atomic_cas_bool.scpp  atomic_inc.scpp  atomic_sub.scpp  atomic_sub_noret.scpp
SDAAC_examples/broadcast/: README.md  async_broadcast.scpp  async_broadcast_spm2spm.scpp  sync_broadcast.scpp  sync_broadcast_handle.scpp
SDAAC_examples/malloc_free/: README.md  malloc_free.scpp
SDAAC_examples/math_funcs/: README.md
SDAAC_examples/math_funcs/double_scalar/: atan.scpp  cos.scpp  erf.scpp  exp.scpp  log.scpp  sigmoid.scpp  sin.scpp  tan.scpp  tanh.scpp
SDAAC_examples/math_funcs/single_scalar/: atanf.scpp  cosf.scpp  erff.scpp  expf.scpp  logf.scpp  sigmoidf.scpp  sinf.scpp  tanf.scpp  tanhf.scpp
SDAAC_examples/math_funcs/vector/: simd_atan.scpp  simd_atan128.scpp  simd_erf.scpp  simd_erf128.scpp  simd_exp.scpp  simd_exp128.scpp  simd_inv.scpp  simd_log.scpp  simd_log128.scpp  simd_sigmoid.scpp  simd_sigmoid128.scpp  simd_sqrt.scpp  simd_tanh.scpp  simd_tanh128.scpp
SDAAC_examples/matmul/: README.md  matmul_async_100_32_32.scpp  matmul_async_128_64_32.scpp  matmul_async_200_32_32.scpp  matmul_half.scpp  matmul_int16.scpp
SDAAC_examples/simd/: README.md
SDAAC_examples/simd/simd_concat/: simd_concat_floatv16.scpp  simd_concat_halfv16.scpp  simd_concat_intv16.scpp  simd_concat_shortv32.scpp
SDAAC_examples/simd/simd_copy_sign/: simd_copy_sign.scpp
SDAAC_examples/simd/simd_cvt/: simd_cvt_f2h.scpp  simd_cvt_h2f.scpp
SDAAC_examples/simd/simd_ins/: simd_ins_floatv16.scpp  simd_ins_halfv16.scpp  simd_ins_intv16.scpp  simd_ins_shortv32.scpp
SDAAC_examples/simd/simd_load/: simd_load_floatv16.scpp  simd_load_halfv16.scpp  simd_load_intv16.scpp  simd_load_shortv32.scpp
SDAAC_examples/simd/simd_loadu/: simd_loadu_floatv16.scpp  simd_loadu_halfv16.scpp  simd_loadu_intv16.scpp  simd_loadu_shortv32.scpp
SDAAC_examples/simd/simd_seleq/: simd_seleq_floatv16.scpp  simd_seleq_halfv16.scpp  simd_seleq_intv16.scpp  simd_seleq_shortv16.scpp
SDAAC_examples/simd/simd_selle/: simd_selle_floatv16.scpp  simd_selle_halfv16.scpp  simd_selle_intv16.scpp  simd_selle_shortv16.scpp
SDAAC_examples/simd/simd_sellt/: simd_sellt_floatv16.scpp  simd_sellt_halfv16.scpp  simd_sellt_intv16.scpp  simd_sellt_shortv16.scpp
SDAAC_examples/simd/simd_store/: simd_store_floatv16.scpp  simd_store_halfv16.scpp  simd_store_intv16.scpp  simd_store_shortv32.scpp
SDAAC_examples/simd/simd_storeu/: simd_storeu_floatv16.scpp  simd_storeu_halfv16.scpp  simd_storeu_intv16.scpp  simd_storeu_shortv32.scpp
SDAAC_examples/simd/simd_stretch/: simd_stretch_floatv16.scpp  simd_stretch_intv16.scpp
SDAAC_examples/simple_examples/: README.md  hello.scpp  spmd.scpp
SDAAC_examples/sync_thread/: README.md  sync_threads.scpp
SDAAC_examples/transpose/: README.md
SDAAC_examples/transpose/async/: global2spm.scpp  global2spm_stride.scpp
SDAAC_examples/transpose/sync/: global2global.scpp  global2spm.scpp  spm2global.scpp  spm2spm.scpp
api/: torch_ext.cpp
api/tecoops/: __init__.py
doc/: README_OP.md  README_PYTHON.md  teco-ops-hardware.md
doc/op_docs/: causal_conv1d.md
plugin_test/: test_plugin_causal_conv1d.py  test_plugin_reduce_variance.py
python_api_test/: test_causal_conv1d.py  test_morton3D_invert.py  test_reshape_and_cache.py
teco/interface/common/: check.h  convert.cpp  macro.h  tecoops.cpp  tensor.cpp  tensor.h
teco/interface/include/: builtin_type.h  tecoops.h
teco/interface/ops/: causal_conv1d.cpp  flatten_rays.cpp  memset.cpp  reduce_variance.cpp
teco/plugin/pluginCausalConv1d/: plugin_causal_conv1d.cc
teco/plugin/pluginReduceVariance/: plugin_reduce_variance.cc
teco/ual/args/: causal_conv1d_args.h  memset_args.h  reduce_variance_args.h
teco/ual/kernel/causal_conv1d/: causal_conv1d.h  causal_conv1d.scpp
teco/ual/ops/: base_op.hpp
test/: CMakeLists.txt
test/src/suite/: executor.cpp
test/test_proto/: tecokernel.proto
test/test_proto/tecokernel/: causal_conv1d.proto  memset.proto  reduce_variance.proto
test/zoo/: tecozoo.h
test/zoo/teco/: convert.cpp  convert.h  executor.cpp  executor.h  executor.py
test/zoo/teco/causal_conv1d/: causal_conv1d.cpp  causal_conv1d.h  causal_conv1d.py
test/zoo/teco/causal_conv1d/test_case/: case_0.prototxt  case_1.prototxt
test/zoo/teco/flatten_rays/: flatten_rays.cpp
test/zoo/teco/memset/: memset.cpp  memset.h
test/zoo/teco/memset/test_case/: case_0.prototxt  case_1.prototxt
test/zoo/teco/reduce_variance/: reduce_variance.cpp  reduce_variance.h  reduce_variance.py
test/zoo/teco/reduce_variance/test_case/: case_0.prototxt  case_1.prototxt  case_2.prototxt
(+44 files in other folders)
